Trello #367 Discourse theme - align with upstream tag v0.9.9.10 + create mobile theme: mobile header (+ make logo white on hover), fix desktop styles polluting Mobile View, add username coloring for special groups

--- a/assets/stylesheets/common/base/header.scss
+++ b/assets/stylesheets/common/base/header.scss
@@ -1,12 +1,30 @@
 @import "common/foundation/variables";
 @import "common/foundation/mixins";
 
-// HEADER OVERRIDES. PLEASE TRY TO KEEP FILE STRUCTURE 1:1 WITH VENDOR FILE
+// GENERAL HEADER OVERRIDES. PLEASE TRY TO KEEP FILE STRUCTURE 1:1 WITH VENDOR FILE
 
 
 
 .d-header {
   background-color: $gray-sitepoint-header-bg-SP;
+
+
+  // SP custom rule
+  .container {
+    margin-left: 10px;
+    margin-right: 10px;
+    max-width: none;
+    width: auto;
+  }
+
+
+  // Sitepoint custom style:
+  .logomark {
+    float: left; // so that left-floating .extra-info-wrapper can sit on logo's and link's right side
+    margin-top: 11px;
+    margin-right: 10px;
+  }
+
 
   .current-username {
     a {
